# LegitMate

./: .gitignore  CLAUDE.md  Makefile  README.md  design.md  implementation.md  package-lock.json  package.json  skills-lock.json
apps/extension/: manifest.json  package.json  popup.html  vite.config.ts
apps/extension/src/: config.ts  messages.ts
apps/extension/src/api/: client.ts
apps/extension/src/background/: serviceWorker.ts
apps/extension/src/content/: pageSignals.ts
apps/extension/src/popup/: eggRating.ts  main.tsx  styles.css
apps/extension/src/reporting/: reportRouting.test.ts  reportRouting.ts
apps/extension/src/scoring/: scoring.test.ts  scoring.ts  types.ts  urlFeatures.test.ts  urlFeatures.ts
apps/web-dashboard/: .env.example  .gitignore  README.md  index.html  package.json  vite.config.ts
apps/web-dashboard/scripts/: package-extension.mjs
apps/web-dashboard/src/: App.tsx  config.ts  index.css  types.ts  vite-env.d.ts
docs/: contributing.md  privacy.md  scoring.md  threat-model.md
ml/datasets/: README.md
ml/features/: README.md
ml/models/: README.md
ml/training/: README.md
services/api/: pyproject.toml
services/api/app/: __init__.py  domain.py  main.py  models.py  reporting.py  scoring.py
services/api/app/feeds/: __init__.py
services/api/app/rdap/: __init__.py  client.py
services/api/app/reputation/: __init__.py  feeds.py
services/api/app/routers/: domain_analysis.py  reports.py
services/api/app/scoring/: __init__.py  signals.py
services/api/tests/: test_domain.py  test_main.py
services/workers/: README.md
(+7 files in other folders)
